# haskell

./: flake.nix
adversity/: anamorphisms.hs  binaryTree.hs  either.hs  maybe.hs  naturals.hs  strings.hs
applicative/: combinations.hs  constant.hs  either.hs  fixerupper.hs  identity.hs  instances.hs  list.hs  lookups.hs  ziplist.hs
datatypes/: asPattern.hs  ciphers.hs  foldBinary.hs  hutton.hs  langExercises.hs  listBinary.hs  mapBinary.hs  phone.hs  programmers.hs  vehicles.hs
foldable/: filter.hs  instances.hs  library.hs
folds/: database.hs  scans.hs  stdlib.hs
functor/: func.hs  functor.hs  heavy.hs  possibly.hs  sum.hs
lists/: ciphers.hs  datachar.hs  stdlib.hs  zip.hs
monad/: bind.hs  either.hs  functions.hs  instances.hs
monoid/: maybe.hs  monoid.hs  optional.hs  semigroup.hs
parsers/: practice.hs  success.hs  trytry.hs
projects/: ciphers.hs  palindrome.hs  person.hs
projects/hangman/: hangman.cabal
projects/hangman/data/: words.txt
projects/hangman/src/: Main.hs
reader/: chapter.hs  comprehension.hs  warmup.hs
state/: rollyourown.hs  state.hs
testing/: testing.cabal  testing.hs
testing/src/: Main.hs  WordNumber.hs
traversable/: instances.hs
